For the collections page, provide an option for filter position
For the collections page, provide an option for filter position

--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -350,6 +350,10 @@
         {
           "value": "drawer",
           "label": "t:sections.main-collection-product-grid.settings.filter_type.options__3.label"
+        },
+        {
+          "value": "bottom",
+          "label": "t:sections.main-collection-product-grid.settings.filter_type.options__4.label"
         }
       ],
       "default": "horizontal",
