--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -459,6 +459,15 @@
                   section_id: section.id,
                   show_pickup_availability: true
                 -%}
+
+              {%- when 'tags' -%}
+                {%- render 'tag-buttons',
+                  block: block,
+                  product: product,
+                  product_form_id: product_form_id,
+                  section_id: section.id,
+                  show_pickup_availability: true
+                -%}
               {%- when 'rating' -%}
                 {%- if product.metafields.reviews.rating.value != blank -%}
                   <div class="rating-wrapper">
